[tool.poetry]
name = "buildh3r-june-algorand"
version = "0.1.0"
description = ""
authors = ["emmyoat <120312489+emmyoat@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
